@@ -1,2 +1,1 @@
-DIST linphone-3.8.1.tar.gz 15327283 SHA256 8d45bc9ec9a795a29bfdbf60c665bdfa81b46f3c83e870d50ad7c3f25156bca7 SHA512 f9f0b9549961485988efa963b3eba7f2c9a96ea4b0b0d5e206a944479ac9171f25f56183874c281f885a691e96843bd0cec361826b15c2fa20d61f533c6c9712 WHIRLPOOL 846e1bc8ff89ebe9a27e9567c94b31c20f767e4b29af3a4ed42858b82c55c43eb613016fd706ecf93d0afaa3c15e26c2076fa56127fa07ecf233bb805875c205
-DIST linphone-3.8.5.tar.gz 9593276 SHA256 edf18a9f3b92ae52589e38eee7c9e24f188ea2b3f14d401bc663ddd34edc751c SHA512 8ba00b61d16b5af4809b5052d9950b99963274a030e433d73b5e374ab00d5c0900cb610aaec74ffaf08e837a511f13221a94f96016ddda1ea2bc447e077ebc4c WHIRLPOOL 45f56ab030fbd37c17681307762427660f5091de6f6cbd470de0e2e83e3ef69e4cbf64626d24620a2ce8987dd270ddb6a54ab4a8f972c1a711bac51f9637d2c1
+DIST linphone-3.9.0.tar.gz 13424982 SHA256 bcdf975b339de90906b0c27917ae6eb471733356690e6b7cd8ba36d8f96363e2 SHA512 4a97db69845fe91314c489050c8a5090ee1ac023bdcf4383bd3af9faca8fa774830113b13d1c654614331a024b4f7a5038e27ee5cdac360eb1b2e421de55b66a WHIRLPOOL b4a7034ccbe48cccdcb1c26b04eef1ba1518b1a7fd8be6f827d9e7890dc634b69c121499e841e8cae913b7b1b2126552e78bdba9d15248a2cd6f94d7ee7fb56d
